# cyndra-examples

./: .gitignore  .gitpod.yml  README.md  templates.toml
_benchmarks/: README.md
_scripts/: check-templates.rs
actix-web/: README.md
actix-web/clerk/: .gitignore  README.md  cyndra.toml
actix-web/clerk/backend/: Cargo.toml
actix-web/clerk/backend/src/: main.rs
actix-web/clerk/frontend/: index.html
actix-web/cookie-authentication/: Cargo.toml
actix-web/cookie-authentication/src/: main.rs
actix-web/hello-world/: Cargo.toml
actix-web/hello-world/src/: lib.rs  main.rs
actix-web/postgres/: Cargo.toml  README.md
actix-web/postgres/src/: lib.rs  main.rs
actix-web/static-files/: Cargo.toml
actix-web/static-files/src/: main.rs
actix-web/websocket-actorless/: Cargo.toml
actix-web/websocket-actorless/src/: lib.rs  main.rs
actix-web/websocket-actorless/static/: index.html
axum/hello-world/: Cargo.toml
axum/hello-world/src/: lib.rs  main.rs
axum/htmx-crud/: Cargo.toml  README.md
axum/htmx-crud/src/: main.rs
axum/htmx-crud/templates/: index.html  stream.html  todo.html
axum/jwt-authentication/: Cargo.toml
axum/jwt-authentication/src/: main.rs
axum/metadata/: Cargo.toml
axum/metadata/src/: main.rs
axum/oauth2/: Cargo.toml  README.md
axum/oauth2/src/: main.rs
axum/openai/: .gitignore  Cargo.toml  README.md  justfile
axum/openai/frontend/app/: page.tsx
axum/openai/hurl/: register.hurl
axum/openai/src/: main.rs  state.rs
axum/openai/src/endpoints/: openai.rs
axum/postgres/: .gitignore  Cargo.toml  README.md
axum/postgres/src/: main.rs
axum/qdrant/: Cargo.toml  README.md
axum/qdrant/src/: main.rs
axum/static-files/: Cargo.toml  README.md
axum/static-files/assets/: index.html
axum/static-files/src/: lib.rs  main.rs
axum/static-next-server/: Cargo.toml  README.md
axum/static-next-server/src/: lib.rs  main.rs
axum/turso/: Cargo.toml  Secrets.dev.toml
axum/turso/src/: main.rs
axum/websocket/: Cargo.toml
axum/websocket/src/: lib.rs  main.rs
axum/with-state/: Cargo.toml
axum/with-state/src/: main.rs
bevy/hello-world/: Makefile  README.md
bevy/hello-world/server/: Cargo.toml
crontab/: Cargo.toml  README.md
crontab-api/: Cargo.toml  README.md
crontab-api/src/: main.rs  router.rs
crontab/src/: main.rs
custom-resource/pdo/: Cargo.toml
custom-resource/pdo/src/: lib.rs  main.rs
custom-service/none/: Cargo.toml
custom-service/none/src/: main.rs
custom-service/request-scheduler/: Cargo.toml  README.md
custom-service/request-scheduler/src/: error.rs  lib.rs
custom/main-custom/: Cargo.toml
custom/main-custom/src/: lib.rs
custom/none/: Cargo.toml
custom/request-scheduler/: Cargo.toml  README.md
custom/request-scheduler/src/: error.rs  lib.rs  main.rs
cyndra-cron/: .gitignore  Cargo.toml  README.md
cyndra-cron/src/: main.rs
fullstack-templates/saas/: README.md  package.json  turbowatch.ts
fullstack-templates/saas/backend/: .gitignore  Cargo.toml
loco/hello-world/: .gitignore  Cargo.toml  README.md
next/hello-world/: Cargo.toml
next/hello-world/src/: lib.rs
other/feature-flags/: Cargo.toml
other/feature-flags/src/: main.rs
other/standalone-binary/: Cargo.toml  README.md
other/standalone-binary/src/: lib.rs  main.rs
poem/hello-world/: Cargo.toml
poem/hello-world/src/: lib.rs  main.rs
poem/mongodb/: Cargo.toml
poem/mongodb/src/: lib.rs  main.rs
poem/postgres/: Cargo.toml
poem/postgres/src/: lib.rs  main.rs
poise/hello-world/: Cargo.toml  README.md
poise/hello-world/src/: lib.rs  main.rs
rama/hello-world/: Cargo.toml
rama/hello-world-tcp/: Cargo.toml  README.md
rama/hello-world-tcp/src/: main.rs
rama/hello-world/src/: main.rs
rama/static-files/: Cargo.toml  README.md
rama/static-files/assets/: index.html
rama/static-files/src/: main.rs
rocket/authentication/: Cargo.toml  README.md
rocket/authentication/src/: claims.rs  lib.rs  main.rs
rocket/dyn-templates/: Cargo.toml  README.md
rocket/dyn-templates/src/: main.rs
rocket/dyn-templates/templates/: index.html.hbs
rocket/dyn_template_hbs/: Cargo.toml
rocket/dyn_template_hbs/src/: main.rs
rocket/hello-world/: Cargo.toml
rocket/hello-world/src/: lib.rs  main.rs
rocket/jwt-authentication/: Cargo.toml  README.md
rocket/jwt-authentication/src/: main.rs
rocket/opendal-memory/: Cargo.toml  README.md
rocket/opendal-memory/src/: main.rs
rocket/persist/: Cargo.toml  README.md
rocket/persist/src/: lib.rs  main.rs
rocket/postgres/: Cargo.toml
rocket/postgres/src/: lib.rs  main.rs
rocket/secrets/: Cargo.toml
rocket/secrets/src/: lib.rs  main.rs
rocket/static-files/: Cargo.toml
rocket/static-files/assets/: index.html
rocket/static-files/src/: main.rs
rocket/url-shortener/: Cargo.toml  README.md
rocket/url-shortener/src/: lib.rs  main.rs
rocket/workspace/hello-world/: Cargo.toml
salvo/hello-world/: Cargo.toml
salvo/hello-world/src/: lib.rs  main.rs
salvo/image-rescaler/: Cargo.toml  README.md
salvo/image-rescaler/src/: main.rs
serenity/hello-world/: Cargo.toml  README.md
serenity/hello-world/src/: lib.rs  main.rs
serenity/postgres/: Cargo.toml  README.md
serenity/postgres/src/: lib.rs  main.rs
serenity/weather-forecast/: Cargo.toml  README.md
serenity/weather-forecast/src/: main.rs
thruster/hello-world/: Cargo.toml
thruster/hello-world/src/: lib.rs  main.rs
thruster/postgres/: Cargo.toml
thruster/postgres/src/: lib.rs  main.rs
tide/hello-world/: Cargo.toml
tide/hello-world/src/: lib.rs  main.rs
tide/postgres/: Cargo.toml
tide/postgres/src/: lib.rs  main.rs
tower/hello-world/: Cargo.toml
tower/hello-world/src/: lib.rs  main.rs
tracing/axum-logs-endpoint/: Cargo.toml
tracing/axum-logs-endpoint/src/: logger.rs  main.rs
tracing/custom-layer/: Cargo.toml
tracing/custom-layer/src/: main.rs
tracing/custom-tracing-subscriber/: Cargo.toml
tracing/custom-tracing-subscriber/src/: main.rs
url-shortener/: Cargo.toml  README.md
url-shortener/src/: lib.rs
warp/hello-world/: Cargo.toml
warp/hello-world/src/: lib.rs  main.rs
(+7 files in other folders)
