[package]
name = "crontab"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
cron = "0.12.0"
cyndra-runtime = "0.15.0"
cyndra-service = "0.15.0"
tokio = "1.28.0"
tracing = "0.1.37"
