[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
serde = { version = "1.0.188", features = ["derive"] }
cyndra-axum = { git = "https://github.com/cyndra-hq/cyndra", branch = "feat/enable-rds-on-new-platform"}
cyndra-runtime = { git = "https://github.com/cyndra-hq/cyndra", branch = "feat/enable-rds-on-new-platform"}
cyndra-aws-rds = { git = "https://github.com/cyndra-hq/cyndra", features = ["postgres", "sqlx"], branch = "feat/enable-rds-on-new-platform" } 
sqlx = "0.8.2"
tokio = "1.28.2"
