[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
serde = { version = "1.0.188", features = ["derive"] }
cyndra-axum = { version = "0.50.0", default-features = false, features = ["axum-0-7"] }
cyndra-runtime = "0.50.0"
cyndra-shared-db = { version = "0.50.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
tokio = "1.28.2"
