[package]
name = "static-files"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.10"
axum-extra = { version = "0.4.2", features = ["spa"] }
cyndra-axum = { version = "0.18.0" }
cyndra-runtime = { version = "0.18.0" }
cyndra-static-folder = "0.18.0"
tokio = { version = "1.26.0" }
