[package]
name = "multi-binary"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "multi-binary"
path = "src/bin/cyndra.rs"

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

[dependencies]
axum = "0.6.18"
dotenvy = "0.15.7"
cyndra-axum = "0.32.0"
cyndra-runtime = "0.32.0"
cyndra-secrets = "0.32.0"
tokio = "1.28.2"
