[package]
name = "multi-binary"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "multi-binary"
path = "src/bin/cyndra.rs"

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

[dependencies]
axum = "0.7.3"
dotenvy = "0.15.7"
cyndra-axum = { version = "0.55.0", default-features = false, features = ["axum-0-7"] }
cyndra-runtime = "0.55.0"
tokio = "1.28.2"
