[package]
name = "mongodb-poem-app"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.3.0"
poem = "1.3.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cyndra-service = { version = "0.7.0", features = ["web-poem"] }
cyndra-shared-db = { version = "0.7.0", features = ["mongodb"] }
