[package]
name = "mongodb-poem-app"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.3.1"
poem = "1.3.49"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
cyndra-service = { version = "0.7.2", features = ["web-poem"] }
cyndra-shared-db = { version = "0.7.2", features = ["mongodb"] }
