[package]
name = "mongodb-poem-app"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.4.0"
poem = "2.0.0"
cyndra-poem = "0.37.0"
cyndra-shared-db = { version = "0.37.0", features = ["mongodb"] }
cyndra-runtime = "0.37.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = "1.26.0"
