[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "1.3.55"
serde = "1.0.148"
cyndra-poem = "0.22.0"
cyndra-runtime = "0.22.0"
cyndra-shared-db = { version = "0.22.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26.0"
