[package]
name = "opendal-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
cyndra-runtime = "0.46.0"
cyndra-opendal = "0.46.0"
tokio = "1.26.0"
cyndra-rocket = "0.46.0"
opendal = "0.45"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.148", features = ["derive"] }
