[package]
name = "persist"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.148", features = ["derive"] }
cyndra-persist = "0.15.0"
cyndra-rocket = { version = "0.15.0" }
cyndra-runtime = { version = "0.15.0" }
tokio = { version = "1.26.0" }
