[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.148"
cyndra-shared-db = { version = "0.12.0", features = ["postgres"] }
cyndra-rocket = { version = "0.12.0" }
cyndra-runtime = { version = "0.12.0" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.26.0" }
