[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.148"
cyndra-rocket = "0.39.0"
cyndra-runtime = "0.39.0"
cyndra-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.1"
tokio = "1.26.0"
