[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
nanoid = "0.4.0"
opendal = "0.51"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.148"
cyndra-rocket = "0.51.0"
cyndra-runtime = "0.51.0"
cyndra-shared-db = { version = "0.51.0", features = ["opendal-postgres"] }
tokio = "1.26.0"
url = "2.5.4"
