[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
cyndra-serenity = "0.18.0"
cyndra-runtime = "0.18.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
cyndra-secrets = "0.18.0"
tokio = "1.26.0"
tracing = "0.1.37"
