[package]
name = "serenity-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serde = "1.0.148"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
cyndra-secrets = "0.35.0"
cyndra-serenity = "0.35.0"
cyndra-runtime = "0.35.0"
cyndra-shared-db = { version = "0.35.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26.0"
tracing = "0.1.37"
