[package]
name = "postgres-serenity-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serde = "1.0.148"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
cyndra-runtime = "0.55.0"
cyndra-serenity = "0.55.0"
cyndra-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
tokio = "1.26.0"
tracing = "0.1.37"
