[package]
name = "cyndra-docs-weather-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.197"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
cyndra-runtime = "0.42.0"
cyndra-serenity = "0.42.0"
tokio = "1.26.0"
tracing = "0.1.37"
