[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "0.14.23"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
cyndra-aws-rds = { version = "0.29.0", features = ["postgres"] }
cyndra-thruster = "0.29.0"
cyndra-runtime = "0.29.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
thruster = { version = "1.3.0", features = ["hyper_server"] }
tokio = "1.26.0"
