[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "0.14.23"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
cyndra-aws-rds = { version = "0.36.0", features = ["postgres", "sqlx"] }
cyndra-runtime = "0.36.0"
cyndra-thruster = "0.36.0"
sqlx = "0.7.1"
thruster = { version = "1.3.0", features = ["hyper_server"] }
tokio = "1.26.0"
