[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
cyndra-aws-rds = { version = "0.15.0", features = ["postgres"] }
cyndra-runtime = { version = "0.15.0" }
cyndra-tide = { version = "0.15.0" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.26.0" }
tide = "0.16.0"
